--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,12 @@
         "yiisoft/yii2": "~2.0.45",
         "yiisoft/yii2-bootstrap5": "~2.0.2",
         "yiisoft/yii2-symfonymailer": "~2.0.3",
-        "kartik-v/yii2-widget-colorinput": "*"
+        "kartik-v/yii2-widget-colorinput": "*",
+        "kartik-v/yii2-widget-datetimepicker": "*",
+        "yiisoft/yii2-bootstrap4": "^2.0",
+        "phpoffice/phpspreadsheet": "^1.26",
+        "kartik-v/yii2-widget-fileinput": "*",
+        "2amigos/yii2-ckeditor-widget" : "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
@@ -32,6 +37,7 @@
         "codeception/module-filesystem": "^2.0 || ^1.1",
         "codeception/verify": "^2.2",
         "symfony/browser-kit": "^6.0 || >=2.7 <=4.2.4"
+
     },
     "autoload-dev": {
         "psr-4": {
