--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "yiisoft/yii2-bootstrap4": "^2.0",
         "phpoffice/phpspreadsheet": "^1.26",
         "kartik-v/yii2-widget-fileinput": "*",
-        "2amigos/yii2-ckeditor-widget" : "*"
+        "2amigos/yii2-ckeditor-widget" : "*",
+        "kartik-v/yii2-widget-select2": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
